# cap-4601-project-2

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitpod.yml  .mypy.ini  .pre-commit-config.yaml  DockerBuild.sh  DockerRun.sh  Dockerfile  Dockerfile.gpu  Dockerfile.gpu2  DownloadPretrained.sh  README.md  downloadDataset.sh  pyproject.toml  requirementsGPU.txt
.devcontainer/: devcontainer.json
.github/workflows/: pipeline.yml
src/cap_4601_project_2/: __init__.py  main.py  test.py
src/pretrainedEntity/: entityFinder.py  models.py  utils.py
src/pureModel/: entityFinder.py  entityModels.py  relFinder.py  relModels.py
src/semevalModel/: entityModel.py  relationModel.py  semevalDataset.py  train.py  trainEntity.py  trainRelation.py
tests/: test_cap_4601_project_2.py
